# AUX-Protocol

./: .gitignore  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  comprehensive_performance_test.py  debug_mcp_params.py  github_setup_commands.txt  pyproject.toml  setup.py  test_advanced_automation.py  test_basic_import.py  test_direct_functionality.py  test_mcp_server.py  test_mcp_simple.py
docs/: advanced-automation.md  browser-setup.md  mcp-integration.md  protocol.md
examples/: advanced_automation.py  basic_automation.py
src/aux_protocol/: __init__.py  browser_adapter.py  config.py  exceptions.py  schema.py  server.py
src/aux_protocol/tools/: __init__.py  automation.py  base.py  interaction.py  navigation.py  observation.py  query.py
